Renew simulated data

--- a/Simulation_of_Data.Rmd
+++ b/Simulation_of_Data.Rmd
@@ -8,9 +8,18 @@ output: html_document
 library(faux)
 ```
 
-# Simulation
+# Simulation Population
+
+Simulation einer Population.
 
 ```{r}
-x <- 1
+data <- rnorm_multi(
+  n = 200, 
+  mu = c(0, 45, 180),
+  sd = c(3, 5, 5),
+  r = c(0.5, 0.5, 0.25), 
+  varnames = c("health", "age", "heigth"),
+  empirical = FALSE
+  )
 ```
 
