--- a/simulate_data.Rmd
+++ b/simulate_data.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
   md_document:
-    variant: markdown_github
+    variant: markdown_mmd
 ---
 
 # How to simulate data in R
@@ -35,5 +35,8 @@ data %>%
   geom_smooth(formula = y ~ x, method = lm, se = F)
 ```
 
-mean
+$s=\sqrt{\frac{1}{N-1}\sum_{i=1}^N(x_i-\bar{x})^2}$
+
+$s=\sqrt{\frac{\sum_{i=1}^N(x_i-\bar{x})^2}{N-1}}$
+
 
