--- a/mean.Rmd
+++ b/mean.Rmd
@@ -2,10 +2,11 @@
 output:
   md_document:
     variant: markdown_mmd
+knit: (function(input, ...) {rmarkdown::render(input,output_file="markdown/mean.md")})
 ---
 
 # How to calculate the mean
 
 ## Formel
 
-$mean=$
+$mean={\frac {1}{n}}\sum _{i=1}^{n}a_{i}={\frac {a_{1}+a_{2}+\cdots +a_{n}}{n}}$
